# earth_data_science_textbook

./: Compare Lidar With Human Measured Tree Heights - Remote Sensing Uncertainty _ Earth Data Science - Earth Lab.html  pyproject.toml  remote_sensing_uncertainty.md
section_1/: datetime.ipynb  time_series.ipynb
section_1/data/: boulder_july_2018.csv
section_2/: clip_vector_data.ipynb  dissolve_polygons.ipynb  missing_data.ipynb  spatial_joins.ipynb
section_3/: bayes.ipynb  classify_and_plot.ipynb  crop_raster.ipynb  dissolve_polygons.ipynb  geotiff.ipynb  open_raster_data.ipynb  process_raster_data.ipynb  raster_data.ipynb  raster_hist.ipynb  raster_metadata.ipynb  raster_practice.ipynb  reproject.ipynb
section_4/: compare_lidar_to_measured.ipynb  extract_data.ipynb  regrerssion_analysis.ipynb  remote_sensing_uncertainty.ipynb
section_5/: additive_color_models.ipynb  landsat_data.ipynb  naip_data.ipynb
